--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "tailwind-merge": "^3.3.0",
+    "vaul": "^1.1.2",
     "zod": "^3.25.56"
   },
   "devDependencies": {
