--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.8.1",
     "framer-motion": "^12.15.0",
+    "input-otp": "^1.4.2",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
@@ -60,6 +61,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
