--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.57.0",
     "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "tailwind-merge": "^3.3.0",
     "vaul": "^1.1.2",
