--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@clerk/nextjs": "^6.20.1",
     "@clerk/themes": "^2.2.49",
     "@hookform/resolvers": "^5.1.0",
+    "@omi3/audio": "^2.0.3",
+    "@omi3/utils": "^2.0.2",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
