--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.57.0",
