--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-hook-form": "^7.57.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.4",
     "redux-persist": "^6.0.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
